--- a/style.css
+++ b/style.css
@@ -1076,16 +1076,7 @@ justify-content: center;
     height: 300px;
   }
 }
-@media (max-width: 510px) {
-  .logoimg{
-  font-size: 200%;
-  }
-  .pant{
-    display: flex;
-    margin: auto;
-    width: 35em;
-  }
-}
+
 /* nav */
 
 
@@ -1626,7 +1617,7 @@ button a{
   }
 
   .home .content h3 {
-    font-size: 2.5rem;
+    font-size: 3rem;
   }
   .about .content1 {
   padding-bottom: 10%;
@@ -1772,3 +1763,18 @@ padding-top: 40px;
     }
     
      }
+
+@media (max-width: 510px) {
+  .logoimg{
+  font-size: 240%;
+  }
+  .pant{
+    display: flex;
+    margin: auto;
+    width: 35em;
+  }
+	
+	 .home .content h3 {
+    font-size: 2rem;
+  }
+}
