--- a/style.css
+++ b/style.css
@@ -1092,7 +1092,7 @@ justify-content: center;
     text-align: center;
     font-size: 3.5rem;
     color:#000000;
-	background: rgb(247, 247, 247);
+	background: rgb(255 255 255);
   }
 
   .heading1 {
