--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400&display=swap');
 
 .waves{
-    background-color: rgb(248, 248, 248);
+    background-color: rgb((255 255 255));
 
 
 }
