--- a/style.css
+++ b/style.css
@@ -585,6 +585,7 @@ line-height: 02;
   .espacio h1{
     font-size: 200%;
     color: rgb(0, 0, 0);
+    text-align: center
     }
    
 }
@@ -1640,7 +1641,7 @@ button a{
 
   .cabAcordeon{
     min-height: 5vh;
-    width: 100%;
+    width: 60%;
     display: flex;
     padding: 5vh 1% 1% 0;
 }
@@ -1671,7 +1672,7 @@ button a{
   @media (max-width: 850px) {
 
 	    .contenido{
-      width: 100%;
+      width: 60%;
       padding: 0 1% 5% 1%;
       color: #ffffff;
       font-weight: 700;
