--- a/style.css
+++ b/style.css
@@ -1388,7 +1388,7 @@ body {
   font-size: 20px;
   color: #0064f3;
   cursor: pointer;
-  background-color: #fff;
+  background-color: rgb(0 0 0 / 0%);
   box-shadow: 0 0 10px 0 rgba(0,0,0,.5);
   border-radius: 50%;
   -webkit-border-radius: 50%;
