--- a/style.css
+++ b/style.css
@@ -1773,3 +1773,220 @@ padding-top: 40px;
     font-size: 2rem;
   }
 }
+
+
+
+
+
+
+
+/*------------cartas---------*/
+.home2 {
+  min-height: 50vh;
+background-color: rgb(0, 0, 0);
+  z-index: 0;
+  overflow: hidden;
+  position: relative;
+}
+
+.home2 .content2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  padding-bottom: 0;
+  text-align: center;
+}
+
+
+
+.home2 .content2 p {
+  font-size: 2rem;
+  color: rgb(255, 255, 255);
+  padding: 1rem 25rem;   
+}
+
+
+.product1 {
+  text-align: center;
+  margin: 0px 0;
+}
+
+.product1 .box-container1 {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.product1 .box-container1 .box1 {
+  width: 30rem;
+  background: none;
+  text-align: center;
+  border-radius: 1rem;
+  margin: 2rem;
+  cursor: pointer;
+}
+
+
+.product1 .box-container1 .box1 h3 {
+
+  transition: .2s;
+font-size: 1.3vh;
+  color: white;
+  
+}
+
+.product1 .box-container1 .box1 p {
+  font-size: 1.3rem;
+  padding: .7rem 2rem;
+  color: rgb(255, 255, 255);
+}
+
+
+@-webkit-keyframes scroll {
+  0% {
+    transform: translateX(0);
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -ms-transform: translateX(0);
+    -o-transform: translateX(0);
+}
+  100% {
+    transform: translateX(calc(-250px * 5));
+    -webkit-transform: translateX(calc(-250px * 5));
+    -moz-transform: translateX(calc(-250px * 5));
+    -ms-transform: translateX(calc(-250px * 5));
+    -o-transform: translateX(calc(-250px * 5));
+}
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-250px * 5));
+    -webkit-transform: translateX(calc(-250px * 5));
+    -moz-transform: translateX(calc(-250px * 5));
+    -ms-transform: translateX(calc(-250px * 5));
+    -o-transform: translateX(calc(-250px * 5));
+}
+}
+.slider {
+  background: white;
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
+.slider::before {
+  left: 0;
+  top: 0;
+}
+.slider .slide-track {
+          -webkit-animation: scroll 30s linear infinite;
+          animation: scroll 30s linear infinite;
+          display: flex;
+          width: calc(250px * 14);
+}
+.slider .slide {
+  height: 100px;
+  width: 250px;
+}
+:root{
+	--bg-color: #ffffff;
+	--text-color: #22100d;
+	--second-color: #685f78;
+	--main-color: #000000;
+	--big-font: 3.8rem;
+	--h2-font: 2.6rem;
+	--p-font: 1.1rem;
+}
+.container{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+	gap: 4rem;
+	align-items: center;
+	cursor: pointer;
+}
+.container-box{
+	display: flex;
+	align-items: center;
+	gap: 1.8rem;
+	border: 1px solid rgb(0, 255, 170);
+	border-radius: 20px;
+	padding: 20px 30px;
+	box-shadow: -11.729px -11.729px 32px rgba(37, 37, 37, 0.15);
+	transition: all .40s ease;
+}
+.container-box:hover{
+	transform: translateY(-15px);
+}
+.container-text h4{
+	font-size: 20px;
+	font-weight: 700;
+	margin-bottom: 4px;
+  color: white;
+}
+.container-text p{
+	font-size: 1.5rem;
+	color: white;
+	font-weight: 500;
+}
+.container1{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, auto));
+	gap: 4rem;
+	align-items: center;
+	cursor: pointer;
+}
+
+
+.about1 .content1 h2 {
+  font-size: 2rem;
+  color: rgb(0, 0, 0);
+  text-align: center;
+padding-bottom: 3%;
+background-color: rgb(0, 255, 170);
+  
+}
+.about1 {
+    
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 2rem;
+}
+
+
+.about1 .image img {
+  width: 80%;
+  display: flex;
+  margin: auto;
+}
+
+.about1 .content1 {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 40rem;
+          flex: 1 1 40rem;
+}
+
+
+.about1 .content1 h3 {
+  color: #ffffff;
+  font-size: 3.8rem;
+  text-align:center;
+}
